# affect-battery

./: .coverage  .envrc  .envrc.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: calibration-gate.yaml  exp3a_runner.yaml  exp3a_runner_h3b_2026-05-07.yaml  exp3a_runner_within_subjects.yaml  exp3b_runner.yaml  exp3c_runner.yaml  full_run.yaml  h3b_calibration_2026-04-27.json  h3b_calibration_2026-05-08-fullpool.json  h3b_calibration_2026-05-08.json  hedging_codebook.yaml  intensity_levels.yaml  intensity_pilot_seed.json  negativeprompt_stimuli.yaml  osf_prereg_v1.yaml  pilot.yaml  result_schema.json
docs/: RUNNING_EXPERIMENTS.md  full_experiment_orchestrator_proposal.md
scripts/: auto_calibrate_arithmetic.py  build_dashboard.py  compact_yaml.py  create_prereg_tag.py  generate_arithmetic_hard_v1.py  generate_transfer_hard_arithmetic_v1.py  ingest_factual_qa.py  ingest_logic_bank.py  migrate_arithmetic_easy_v1.py  migrate_transfer_easy_v1.py
src/: analysis_corrections.py  cli.py  cli_preflight.py  models.py  runner.py  tracking.py  util.py
tests/: test_accuracy.py  test_aggregate_report.py  test_analysis_pipeline.py  test_api_clients.py  test_arousal_magnitude_analysis.py  test_asymmetry_compute.py  test_asymmetry_test.py  test_auto_calibrate_script.py  test_auto_calibrator.py  test_bank_alignment_review.py  test_bank_cli_flag.py  test_bank_discriminator.py  test_banks.py  test_banks_sampling.py  test_base_model_runner.py  test_base_model_template.py  test_bootstrap.py  test_budget.py  test_build_h3b_bank.py  (+106 more)
(+149 files in other folders)
